--- a/flumox-client/src/styles/main.css
+++ b/flumox-client/src/styles/main.css
@@ -6,12 +6,14 @@ html,
 body {
   width: 100%;
   height: 100%;
+  min-height: min-content;
   margin: 0;
 }
 
 body {
+  background-color: hsl(0, 0%, 8%);
   color: white;
-  background-color: hsl(0, 0%, 5%);
+  font-family: sans-serif;
 }
 
 #app {
